--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,25 @@ uuid = { version = "1", features = ["v4"] }
 
 # CLI args
 clap = { version = "4", features = ["derive", "env"] }
+
+[lints.rust]
+unsafe_code = "warn"
+missing_docs = "warn"
+
+[lints.clippy]
+# Correctness - these are almost always bugs
+correctness = { level = "deny", priority = -1 }
+
+# Pedantic - stricter lints for better code quality
+pedantic = { level = "warn", priority = -1 }
+
+# Restriction - selectively enable useful ones
+dbg_macro = "warn"
+print_stdout = "warn"
+print_stderr = "warn"
+
+# Relax some overly strict pedantic lints
+module_name_repetitions = "allow"
+must_use_candidate = "allow"
+missing_errors_doc = "allow"
+missing_panics_doc = "allow"
