--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "webxash3d-proxy"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 description = "WebRTC to UDP proxy for CS 1.6 / Half-Life"
 
@@ -29,6 +29,10 @@ uuid = { version = "1", features = ["v4"] }
 
 # CLI args
 clap = { version = "4", features = ["derive", "env"] }
+
+# Embedded assets
+rust-embed = { version = "8", features = ["include-exclude"] }
+mime_guess = "2"
 
 [lints.rust]
 unsafe_code = "warn"
